--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,16 @@
 
     <title>Lounge Hackers</title>
 
-    <meta name="description" content="">
+    <meta name="description" content="Grass roots hackerspace with focus on hacking in lounges, because we realised it is in fact a very creative/productive environment.">
+    <meta name="keywords" content="lounge,hackers,hack,hacking,hackspace,hackerspace,weekly,afterwork,after work,aw,networking,internet,web,technology,startup">
+
     <meta name="viewport" content="width=device-width">
 
     <!-- Google Apps Verification -->
     <meta name="google-site-verification" content="n7jIc9wXh505mx0N9hLZqQQOpLNDLgmuZD8k8X88LGc" />
     <meta name="google-site-verification" content="arY2gbPMDOqHA9jMzeDrTVOGuDPCthXaExmwfrp15nE" />
+
+    <link type="text/plain" rel="author" href="//loungehackers.com/humans.txt" />
 
     <link rel="stylesheet" href="/stylesheets/normalize.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
