--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <script type="text/javascript" src="/javascripts/modernizr.min.js"></script>
   </head>
   <body>
+    <h1 style="display:none;">Lounge Hackers</h1>
+
     <!-- TODO -->
 
     <!-- BEGIN: TERM -->
