--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,79 @@
 <!doctype html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width">
 
     <title>Lounge Hackers</title>
 
+    <!-- Meta -->
     <meta name="description" content="Grass roots hackerspace with focus on hacking in lounges, because we realised it is in fact a very creative/productive environment.">
     <meta name="keywords" content="lounge,hackers,hack,hacking,hackspace,hackerspace,weekly,afterwork,after work,aw,networking,internet,web,technology,startup">
 
-    <meta name="viewport" content="width=device-width">
+    <!-- Open Graph: ogp.me -->
+    <meta property="og:title" content="Lounge Hackers" />
+    <meta property="og:description" content="Grass roots hackerspace with focus on hacking in lounges, because we realised it is in fact a very creative/productive environment." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://loungehackers.com" />
+    <meta property="og:site_name" content="Lounge Hackers" />
+    <meta property="og:image:url" content="http://secure.gravatar.com/avatar/c906844ce24db215809fafacbf72cb00" />
+    <meta property="og:image:secure_url" content="https://secure.gravatar.com/avatar/c906844ce24db215809fafacbf72cb00" />
+    <meta property="og:image:width" content="80" />
+    <meta property="og:image:height" content="80" />
+    <meta property="og:image:type" content="image/png" />
+
+    <!-- Twitter Cards: dev.twitter.com/docs/cards -->
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:site" content="@loungehackers" />
+    <meta property="twitter:creator" content="@grimen" />
+
+    <!-- Humans -->
+    <link rel="author" href="http://loungehackers.com/humans.txt" type="text/plain" />
+
+    <!-- Links -->
+    <link rel="shortcut icon" href="//loungehackers.com/favicon.ico" />
+    <link rel="facebook me" href="https://facebook.com/LoungeHackers" />
+    <link rel="twitter me" href="https://twitter.com/loungehackers" />
+    <link rel="github me" href="https://github.com/loungehackers" />
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="/stylesheets/normalize.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
+
+    <!-- Scripts -->
+    <script type="text/javascript" src="/javascripts/modernizr.min.js"></script>
 
     <!-- Google Apps Verification -->
     <meta name="google-site-verification" content="n7jIc9wXh505mx0N9hLZqQQOpLNDLgmuZD8k8X88LGc" />
     <meta name="google-site-verification" content="arY2gbPMDOqHA9jMzeDrTVOGuDPCthXaExmwfrp15nE" />
-
-    <link type="text/plain" rel="author" href="//loungehackers.com/humans.txt" />
-
-    <link rel="stylesheet" href="/stylesheets/normalize.css">
-    <link rel="stylesheet" href="/stylesheets/main.css">
-
-    <script type="text/javascript" src="/javascripts/modernizr.min.js"></script>
   </head>
   <body>
-    <h1 style="display:none;">Lounge Hackers</h1>
+    <header style="display:none;">
+      <h1>Lounge Hackers</h1>
+
+      <p>
+        Grass roots hackerspace with focus on hacking in lounges, because we realised it is in fact a very creative/productive environment.
+      </p>
+
+      <h2>Focus</h2>
+      <ul>
+        <li>
+          Hacking on stuff alone or together AW-hours in lounge environment weekly - while having a drink and/or interchange with the other mindsets.
+        </li>
+        <li>
+          Build an ecosystem for ambitious people trying to realize own projects using some kind of "hacking", because these are the people that potentially represent the next wave of game-changers. Supporting this should be key.
+        </li>
+        <li>
+          Doing this while not loosing core values over sponsorship deals.
+        </li>
+      </ul>
+
+      <h2>Home</h2>
+      <p>
+        <a href="http://loungehackers.com">http://loungehackers.com</a>
+      </p>
+    </header>
 
     <!-- TODO -->
 
