--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <title>Lounge Hackers</title>
+    <title>Lounge Hackers | Grass roots hackerspace with focus on hacking in lounges</title>
 
     <!-- Meta -->
     <meta name="description" content="Grass roots hackerspace with focus on hacking in lounges, because we realised it is in fact a very creative/productive environment.">
