--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <!-- Meta -->
     <meta name="description" content="Grass roots hackerspace with focus on hacking in lounges, because we realised it is in fact a very creative/productive environment.">
-    <meta name="keywords" content="lounge,hackers,hack,hacking,hackspace,hackerspace,weekly,afterwork,after work,aw,networking,internet,web,technology,startup">
+    <meta name="keywords" content="lounge hackers,lounge hack,lounge,hackers,hack,hacking,hackspace,hackerspace,weekly,afterwork,after work,aw,networking,internet,web,technology,startup">
 
     <!-- Open Graph: ogp.me -->
     <meta property="og:title" content="Lounge Hackers" />
